filter state and upload photo functionality

--- a/views/partials/components/posts.handlebars
+++ b/views/partials/components/posts.handlebars
@@ -12,6 +12,7 @@
                         <p class="card-text"> Rating: {{rating}}</p>
                         <p class="card-text"> Price: {{cost}}</p>
                         <p class="card-text"> Inside Scoop: {{input_insider}}</p>
+                        <img class="inputPhoto" src={{input_photos}}></img>
                         <button class="btn btn-primary">Show photos</button>
                     </div>
                 </div>
@@ -28,6 +29,7 @@
                         <p class="card-text">Rating: {{rating}}</p>
                         <p class="card-text"> Price: {{cost}}</p>
                         <p class="card-text">Inside Scoop: {{input_insider}}</p>
+                        <img class= "inputPhoto" src={{input_photos}}></img>
                         <button class="btn btn-primary">Show photos</button>
                     </div>
                 </div>
