--- a/views/partials/components/submissionstate.handlebars
+++ b/views/partials/components/submissionstate.handlebars
@@ -1,6 +1,6 @@
 <div class="form-group">
-    <label for="inputState">State</label>
-    <select class="form-control" name="state_code" id="inputState" value=>
+    <label for="submissionState">State</label>
+    <select class="form-control" name="state_code" id="submissionState">
         <option value="Alabama">Alabama</option>
         <option value="Alaska">Alaska</option>
         <option value="Arizona">Arizona</option>
