[skip travis] testing

--- a/views/stateevent.handlebars
+++ b/views/stateevent.handlebars
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1 class="display-4 dining-title">Fine Dining!</h1>
+   <h1 class="card-title" category={{activity_category}}> Category: {{activity_category}}</h1>
     <hr>
     </hr>
     <div class="submission-form-container state-filter">
@@ -12,3 +12,4 @@
                 here!</a></h4>
     </footer>
 </div>
+<script src="/assets/js/read.js"></script>
