rerouting images and deleting duplicates

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
   <div class="text-center">
     <br></br>
     <h1 class="display-4">STEPPING OUT</h1>
-    <img class="sun-img" src="/images/sun.png" alt="sun" />
+    <img class="sun-img" src="/assets/images/sun.png" alt="sun" />
     <p class="lead app-instructions">Welcome to Stepping Out! We're glad you're here. This website is designed to help cure your quarantine lonliness by providing you with safe activies for you or you and friend in your area. Click on one of the activity types at the top of the screen to see those type of activites!</p>
    <hr></hr>
    <br></br>
