--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,8 +20,7 @@
 
 <body class="jumbo-bg">
 
-
-	{{>components/NavBar}}
+	{{!-- {{>components/NavBar}} --}}
 	
 	{{{ body }}}
 	  <script src="/assets/js/listener.js"></script>
