--- a/views/partials/components/NavBar.handlebars
+++ b/views/partials/components/NavBar.handlebars
@@ -5,23 +5,20 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item {{#if active.foodrink}}active{{/if}}">
+                <a class="nav-link {{#if this.active.foodrink}}active{{/if}}" href="/foodrink">Food/Drink</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/foodrink">Food/Drink</a>
+                <a class="nav-link {{#if active.sports}}active{{/if}}" href="/sports">Sports</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/sports">Sports</a>
+                <a class="nav-link {{#if active.virtual}}active{{/if}}" href="/virtual">Virtual</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/virtual">Virtual</a>
+                <a class="nav-link {{#if active.entertainment}}active{{/if}}" href="/entertainment">Entertainment</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/entertainment">Entertainment</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/outdoors">Outdoor Recreation </a>
+                <a class="nav-link {{#if active.outdoors}}active{{/if}}" href="/outdoors">Outdoor Recreation </a>
             </li>
         </ul>
     </div>
