--- a/views/submission.handlebars
+++ b/views/submission.handlebars
@@ -44,9 +44,9 @@
                         <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
                     </div>
                     <div class="custom-file">
-                        <input type="file" class="custom-file-input" id="inputGroupFile01"
+                        <input type="file" class="custom-file-input" id="photoInput"
                             aria-describedby="inputGroupFileAddon01" name="profilePic">
-                        <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+                        <label class="custom-file-label" for="photoInput" id="currentFileName">Choose file</label>
                     </div>
                 </div>
             </div>
