changes type of photos accepted

--- a/views/submission.handlebars
+++ b/views/submission.handlebars
@@ -45,6 +45,7 @@
                     </div>
                     <div class="custom-file">
                         <input type="file" class="custom-file-input" id="photoInput"
+                        accept=".jpg, .jpeg, .png">
                             aria-describedby="inputGroupFileAddon01" name="profilePic">
                         <label class="custom-file-label" for="photoInput" id="currentFileName">Choose file</label>
                     </div>
