--- a/views/submission.handlebars
+++ b/views/submission.handlebars
@@ -44,9 +44,9 @@
                         <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
                     </div>
                     <div class="custom-file">
-                        <input type="file" class="custom-file-input" id="photoInput"
-                        accept=".jpg, .jpeg, .png">
-                            aria-describedby="inputGroupFileAddon01" name="profilePic">
+                        <input type="file" class="custom-file-input" id="photoInput" 
+                        
+                            aria-describedby="inputGroupFileAddon01" name="profilePic" accept=".jpg, .jpeg, .png">>
                         <label class="custom-file-label" for="photoInput" id="currentFileName">Choose file</label>
                     </div>
                 </div>
