updating footer button

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <a class="navbar-brand" href="/">Stepping Out</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"aria-controls="#navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="navbarNavDropdown"aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -32,8 +32,8 @@
    <hr></hr>
    <br></br>
     <div class="home-about-team">
-      <footer class="footer">
-        <h4><a href="/submission" class="text-decoration-none" style="color: rgb(255, 96, 4)">Submit your ideas here!</a></h4>
+      <footer>
+        <h4><a href="/submission" class="text-decoration-none btn-lg btn-outline-dark " style="color: rgb(255, 96, 4)">Submit your ideas here!</a></h4>
       </footer>
     </div>
   </div>
